--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -19,10 +19,10 @@
 
   <main>
     <route default>
-      <div>404 not found!</div>
+      <div class="mt-12 pt-3">Route not found</div>
     </route>
     <route path="/" exact>
-      <div style="margin-top: 80px">Home page placeholder</div>
+      <div class="mt-12 pt-3">Home page placeholder</div>
     </route>
     <application name="@mtb/navbar"></application>
   </main>
