--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -23,7 +23,7 @@
       <div class="mt-12 pt-3">Route not found</div>
     </route>
     <route path="/" exact>
-      <div class="mt-12 pt-3">Home page placeholder</div>
+      <div class="mt-12 pt-3">Home page placeholder.</div>
     </route>
   </main>
 </single-spa-router>
