--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -16,7 +16,7 @@
   </route>
 
   -->
-
+  
   <application name="@mtb/navbar"></application>
   <main>
     <route default>
@@ -24,6 +24,9 @@
     </route>
     <route path="/" exact>
       <div class="mt-12 pt-3">Home page placeholder.</div>
+    </route>
+    <route path="swiss-franc">
+      <application name="@mtb/swiss-franc"></application>
     </route>
   </main>
 </single-spa-router>
