--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -25,5 +25,8 @@
     <route path="/" exact>
       <div class="mt-12 pt-3">Home page placeholder.</div>
     </route>
+    <route path="/cad">
+      <application name="@mtb/CAD"></application>
+    </route>
   </main>
 </single-spa-router>
