--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -25,7 +25,7 @@
     <route path="/" exact>
       <div class="mt-12 pt-3">Home page placeholder.</div>
     </route>
-    <route path="/cad">
+    <route path="cad">
       <application name="@mtb/CAD"></application>
     </route>
     <route path="swiss-franc">
