--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -31,5 +31,8 @@
     <route path="swiss-franc">
       <application name="@mtb/swiss-franc"></application>
     </route>
+    <route path="Dollar">
+      <application name="@mtb/Dollar"></application>
+    </route>
   </main>
 </single-spa-router>
