--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -34,5 +34,8 @@
     <route path="Dollar">
       <application name="@mtb/Dollar"></application>
     </route>
+    <route path="usd2">
+      <application name="@mtb/dollar2"></application>
+    </route>
   </main>
 </single-spa-router>
